# proxmox-api-simulator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  SECURITY.md  docker-compose.release.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  compatibility.py  config.py  dependencies.py  evidence_gen.py  lifespan.py  logging.py  main.py  surface_probe.py
app/api/: errors.py  middleware.py  openapi.py  registry.py
app/contracts/: __init__.py  cli.py  diff.py  examples.py  importer.py  model.py  normalize.py  runtime.py  source.py  store.py
app/db/: __init__.py  migrate_cli.py  migrations.py  pool.py  primitives.py
app/handlers/: __init__.py  access.py  access_auth.py  acme.py  backup.py  ceph.py  cluster.py  cluster_config.py  cluster_extra.py  common.py  core.py  ha.py  (+13 more)
docs/: README.md  api-surface.md  api-versions.md  api-viewer-research.md  architecture.md  authentication.md  clients.md  compatibility-0.1.0.md  compatibility.md  configuration.md  docker-hub-overview.md  faq.md  getting-started.md  implementation-plan.md  kubernetes.md  observability.md  operations.md  original-prompt-gap-plan.md  security.md  seed-profiles.md  testing.md  troubleshooting.md  web-ui.md
evidence/: pve-6.4-15.json  pve-7.4-16.json  pve-8.4.5.json  pve-9.2.3-0.1.0.json  pve-9.2.3.json
examples/: README.md  README.ru.md
pulumi-tests/: .env.example  .gitignore  Makefile  README.md  README.ru.md
scripts/: probe_api_surface.py  up-local.sh
(+230 files in other folders)
